--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,13 @@ yarn-error.log*
 next-env.d.ts
 
 /app/generated/prisma
+
+# Agency sensitive data - NEVER commit these
+/data/agency-carrier-settings.json
+/data/agency-*.json
+*.backup.json
+
+# Local development files
+.vscode/
+.idea/
+*.local
