--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "^6.15.0",
     "next": "15.5.2",
+    "openai": "^5.18.1",
     "prisma": "^6.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
