--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.15.0",
+    "bcryptjs": "^3.0.2",
     "next": "15.5.2",
+    "next-auth": "^4.24.11",
     "openai": "^5.18.1",
     "prisma": "^6.15.0",
     "react": "19.1.0",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
